# paperview

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
notebooks/: test_api.ipynb  test_s3_access.ipynb  test_web_access.ipynb
paperview/: __init__.py  main.py  modal_image.py  run_tests_on_modal.py
paperview/api/: api.py  overview_jobs.py
paperview/api/assets/: __init__.py  index.html
paperview/chrome_extension/: background.js  content.js  manifest.json  style.css
paperview/examples/: __init__.py
paperview/examples/10.1101/2022.07.21.500746/: jats.xml  metadata.json
paperview/examples/10.1101/2023.01.20.524874/: jats.xml  metadata.json
paperview/examples/10.1101/456574/: metadata.json
paperview/reader/: README.md  config.py  main.py  models.py  reader.py
paperview/retrieval/: biorxiv.py  biorxiv_api.py  biorxiv_web.py  jats_xml_extraction.py  pdf_extraction.py  process_xml.py
tests/: test_paperview.py
tests/retrieval/: test_biorxiv.py  test_biorxiv_api.py  test_jats_xml_extraction.py  test_pdf_extraction.py
