[tool.poetry]
name = "paperview"
version = "0.1.0"
description = ""
authors = ["anaka <alex.naka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
attrs = "^22.1.0"
pytest = "^7.2.0"
boto3 = "^1.26.32"

[tool.poetry.dev-dependencies]
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
